# CodecLM

./: main.py  pyproject.toml
CodecLM/: encoder.py
CodecLM/helpers/: generate.py  model.py  prompts.py
CodecLM/prompts/: encode.txt
codeclm/: encoder.py
codeclm/config/: modal.py
codeclm/helpers/: metadata.py  prompts.py
codeclm/tests/: test_encoder.py  test_response.py
tmp/helpers/: response.py
